--- a/app/views/product-case-testing/home.html
+++ b/app/views/product-case-testing/home.html
@@ -29,7 +29,7 @@
     <p class="govuk-body-l">
       Report, track and share product safety information.
     </p>
-    <a class="govuk-button govuk-button--start" role="button" draggable="false" href="/product-case-testing/find-the-product">Open a new case</a>
+    <a class="govuk-button govuk-button--start" role="button" draggable="false" href="/product-case-testing/blank-01.html">Open a new case</a>
   </div>
 </div>
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-top-0">
