--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -90,8 +90,15 @@
                 </li>
             </ul> 
 
-            <p class="govuk-body-l">OPSS</p>
-            <p class="govuk-body">In the Case source section is the statement: "Only teams added to the case can view case source contact details" which is shown if the OPSS user is in the team that owns this case</p>
+            <p class="govuk-body-l">Notes:</p>
+
+            <ol class="govuk-list govuk-list--number">
+                <li>In the Case source section is the statement: "Only teams added to the case can view case source contact details" which is shown if the OPSS user is in the team that owns this case</li>
+                <li>In the "Teams added": if no teams have been added the adjacent link reads "Add". Otherwise the link reads "Edit". Use the current pages (for now).</li>
+                <li></li>
+                <li></li>
+                
+            </ol>
 
             <!-- is it correct? ...
             1. 
