--- a/app/views/product-case-testing/upload-a-product-image-success.html
+++ b/app/views/product-case-testing/upload-a-product-image-success.html
@@ -211,6 +211,8 @@
 
     if(($('#img0').length) && ($('#img1').length)){
       $('#max').val('yes');//to redirect to no more images pg
+    }else{
+      $('#max').val('no');
     }
 
   });
