--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -33,23 +33,23 @@
         <li>The product does not comply with the requirements of the General Product Safety Regulations 2005</li>
         <li>The barcode labelled on the product is 886798014739.</li>
       </ul>
-      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first create a record of the product in the Product Safety Database.</p>
+      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p>
 
       <h2 class="govuk-heading-m">
         Task 2
       </h2>
 
-      <p class="govuk-body govuk-visually-hidden">Add a product that matches a product already in the system: we hide the product from the search results so that it throws a match later</p>
+      <p class="govuk-body govuk-visually-hidden">Add a product that matches a product already in the system: we hide the product from the search results so that it throws a match later.</p>
 
       <p class="govuk-body">Upon investigating an EMANBA Electric Scooter you identify that the product poses a serious risk as the speed is not limited to the maximum restriction. Consumers may not be able to stop safely due to unrestricted speeds, which could result in a crash and serious injuries.</p>
       <p class="govuk-body">The product does not meet the requirements of the Supply of Machinery Regulations 2008.</p>
-      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first create a record of the product in the Product Safety Database.</p>
+      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p>
 
       <h2 class="govuk-heading-m">
         Task 3
       </h2>
 
-      <p class="govuk-body govuk-visually-hidden">Can't find product because it doesn't exist - and there is no match, so they create their own product. A standard journey adding product and then onto the case pages</p>
+      <p class="govuk-body govuk-visually-hidden">Can't find product because it doesn't exist - and there is no match, so they create their own product. A standard journey adding product and then onto the case pages.</p>
 
       <p class="govuk-body">Upon investigating the Phillips Triple USB Output AC/DC Adaptor ADS-30W, you identify that the product presents a high risk of electric shock. The internal insulation between the mains circuitry and the USB outputs was found to be deficient and the dimensional requirements of the plug pins was not in accordance with the relevant standard (BS1363).</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -58,7 +58,7 @@
         <li>The product does not comply with the Electrical Equipment (Safety) Regulations 2016</li>
         <li>The barcode on the product is MC00058303.</li>
       </ul>
-      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first create a record of the product in the Product Safety Database.</p>
+      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p>
 <!--
 on scenario 3, should we have a clearer brand?
 
