fixed it did match page

--- a/app/views/product-case-testing/it-was-your-product.html
+++ b/app/views/product-case-testing/it-was-your-product.html
@@ -89,9 +89,9 @@
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-6">
 
-        <span id="productName" data-id="{{ data['theMatch'] }}"></span>: 
+         
         <span class="govuk-!-font-weight-regular opss-no-wrap">
-          <abbr title="Product Safety Database">psd</abbr>-<span id="psdref"></span>
+          <span id="psdref"></span>: <abbr title="Product Safety Database">psd-</abbr><span id="productName" data-id="{{ data['theMatch'] }}"></span>
         </span>
         
       </h1>
@@ -101,14 +101,14 @@
       </p>
 
       <p class="govuk-body">
-        You can <a href="blank-03.html" class="govuk-link govuk-link--no-visited-state">view the full product record details</a> for <span id="productName2"></span>, or use its <abbr>PSD</abbr> reference number to include the product record in a case. 
+        You can <a href="blank-03.html" class="govuk-link govuk-link--no-visited-state">view the full product record details</a> for product record <abbr>psd</abbr>-<span id="productName2"></span>, or use its <abbr>PSD</abbr> reference number to include the product record in a case. 
       </p>      
 
 
       <div class="govuk-inset-text">
-        The <abbr>PSD</abbr> reference number for the '<span id="productName3"></span>' product record is: 
+        The <abbr>PSD</abbr> reference number for this product record is: 
         <span class="govuk-!-font-weight-bold govuk-!-font-size-24">
-          <span class="opss-no-wrap"><abbr>psd</abbr>-<span id="psdref2"></span></span>
+          <span class="opss-no-wrap"><abbr>psd</abbr>-<span id="productName3"></span></span>
         </span> 
       </div>
 
