--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -51,13 +51,11 @@
 
       <p class="govuk-body govuk-visually-hidden">Can't find product because it doesn't exist - and there is no match, so they create their own product. A standard journey adding product and then onto the case pages.</p>
 
-      <p class="govuk-body">Upon investigating the Phillips Triple USB Output AC/DC Adaptor ADS-30W, you identify that the product presents a high risk of electric shock. The internal insulation between the mains circuitry and the USB outputs was found to be deficient and the dimensional requirements of the plug pins was not in accordance with the relevant standard (BS1363).</p>
+      <p class="govuk-body">Upon investigating the Fisher Price 2-in-1 Soothe'n Play Glider infant swing, you identify that the product presents a high risk of suffocation. Infants who are placed unrestrained in the product can move and may shift onto their stomach. The product does meet the requirements of the General Product Safety Regulations 2005.</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>There was a potential that poor connection between the plug and socket which could lead to overheating within the product</li>
-        <li>The product was not marked with the required product markings or accompanied with safety instructions</li>
-        <li>The product does not comply with the Electrical Equipment (Safety) Regulations 2016</li>
-        <li>The barcode on the product is MC00058303.</li>
-      </ul>
+        <li>Category: Childcare articles and children's equipment</li>
+        <li>Product identifiers: FYY21 and HBD64 product code(s)</li>
+       </ul>
       <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p>
 <!--
 on scenario 3, should we have a clearer brand?
