--- a/app/views/product-case-testing/what-is-the-product-name.html
+++ b/app/views/product-case-testing/what-is-the-product-name.html
@@ -276,10 +276,10 @@
 
 <div class="govuk-form-group govuk-!-margin-bottom-5">
   <label class="govuk-label" for="modelnumber">
-    What is the model number?
+    What is the model or product number?
   </label>
   <div id="modelnumber-hint" class="govuk-hint govuk-hint govuk-!-font-size-16">
-    Some products have a separate model number. For example, <span class="opss-no-wrap">334176-01</span>. <!--br class="opss-br-desktop">Numbers in a product name usually form part of the product or model name.--> <!--br class="opss-br-desktop">Some retailers sometimes repeat a model number as part of the product name, or use part of the name as a model number.-->
+    Some products have a separate model or product number. For example, <span class="opss-no-wrap">334176-01</span>. <!--br class="opss-br-desktop">Numbers in a product name usually form part of the product or model name.--> <!--br class="opss-br-desktop">Some retailers sometimes repeat a model number as part of the product name, or use part of the name as a model number.-->
   </div>
   <input class="govuk-input  govuk-input--width-10" id="modelnumber" name="modelnumber" type="text" aria-describedby="modelnumber-hint">
 </div>
