--- a/app/views/product-case-testing/home.html
+++ b/app/views/product-case-testing/home.html
@@ -24,13 +24,13 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-l">Product Safety Database</h1>
+    <h1 class="govuk-heading-l">Product Safety Database - prototype for a new feature</h1>
 
     <p class="govuk-body-l">
-      Report, track and share product safety information.
+      This is a task to demonstrate adding a product to the product records.
     </p>
     
-    <a class="govuk-button govuk-button--start govuk-!-margin-right-4" role="button" draggable="false" href="/product-case-testing/blank-01.html">Create a case</a>
+    <!--a class="govuk-button govuk-button--start govuk-!-margin-right-4" role="button" draggable="false" href="/product-case-testing/blank-01.html">Create a case</a-->
 
     <a class="govuk-button govuk-button--start" role="button" draggable="false" href="/product-case-testing/products-page.html">Create a product record</a>
     
