--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -19,14 +19,17 @@
 
 
 
-      <p class="govuk-body-l">Today we will ask you to complete 3 tasks:</p>
+      <p class="govuk-body-l">In these 3 tasks you will be asked to add a product to the database. <b>You will not be creating a new case</b>, but instead, testing a new feature which requires you to create a new record in the database of a product. These are called product records. These tasks will not involve information relevant to cases. </p>
 
-      <h2 class="govuk-heading-m">
+      <p class="govuk-body-l">Please familiarize yourself with the assets (files) we have emailed you. Please move them to a folder on your computer desktop so that you can refer back to them easily during each task and so you can easily access any product images which you might need to upload during a task.</p>
+
+      <p class="govuk-body-l">You will be asked to add 3 different products to the database.</p>
+
+      <!--h2 class="govuk-heading-m">
         Task 1
       </h2>
 
       <p class="govuk-body govuk-visually-hidden">Add a product that has a matching barcode</p>
-      <!-- Podium Sports Drinking Bottle -->
       <p class="govuk-body">Upon investigating a drinks container by Podium-sports - which sports people can refill and carry the bottle - you identify that the product poses a risk of choking as there is a small silicone valve in the affected caps (with date codes H19063 or H19175).</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>The valve could release while drinking, posing a potential choking hazard</li>
@@ -56,21 +59,15 @@
         <li>Category: Childcare articles and children's equipment</li>
         <li>Product identifiers: FYY21 and HBD64 product code(s)</li>
        </ul>
-      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p>
-<!--
-on scenario 3, should we have a clearer brand?
+      <p class="govuk-body">You will want to eventually notify OPSS about this product. In this task you must first <b>create a record of the product</b> in the Product Safety Database.</p-->
 
-is Phillips clear enough?
-
-FYI for scenario 3 I just tweaked some existing product info, so no need to make any changes to the search
--->
 
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 
 
-      <p class="govuk-body-l">The next page will open in a new tab - <br>please start each new task by clicking this Start button:</p>
+      <p class="govuk-body-l">Please start each new task by clicking this Start button:</p>
 
       <a href="cases-page.html" id="test-clear" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
         Start now
@@ -116,7 +113,7 @@ FYI for scenario 3 I just tweaked some existing product info, so no need to make
       window.localStorage.clear();
 
       //window.location.assign('home.html');
-      window.open('home.html', '_blank').focus();
+      window.open('home.html', '_self').focus();
     });
 
 
