--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -44,7 +44,7 @@
                         Use the Products area to find a product and its product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> <!--You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. -->Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
                     </p>
                     <p class="govuk-body-s">
-                        After checking that the product does not already exist within the <abbr>PSD</abbr> product records, you can add the product to the database (using the links provided in the Products area pages).
+                        After checking that the product does not already exist within the <abbr>PSD</abbr> product records, you can add a new product record to the database (using the links provided in the Products area pages).
                     </p>
                 </div>
             </details>
