--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -299,7 +299,7 @@
                     Batch numbers
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    B3736-33QY, D9887-31ZY
+                    <span class="opss-no-wrap">B3736-33QY</span>, <span class="opss-no-wrap">D9887-31ZY</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -312,7 +312,7 @@
                     Customs codes
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    97888-319
+                    <span class="opss-no-wrap">97888-319</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
