--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -146,6 +146,7 @@
                     <h4 class="govuk-heading-m">Product details</h4>
 
                     <dl class="govuk-summary-list">
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
@@ -156,7 +157,41 @@
                                     <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this product record
                                 </span>
                             </dd>
-                        </div>
+                        </div>                        
+
+                        <!-- if and 3 have a value .... start -->
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Constituent names
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                <dl class="opss-nested-definition-list">
+                                    <div>
+                                        <dt>Manufacturer's brand name</dt>
+                                        <dd>Asda</dd>
+                                    </div>
+                                    <div>
+                                        <dt>Product brand name</dt>
+                                        <dd>Small ball </dd>   
+                                    </div>
+                                    <div>
+                                        <dt>Model name</dt>
+                                        <dd>Animal 2</dd> 
+                                    </div>
+                                </dl>
+                            </dd>
+                        </div> 
+                        <!-- if and 3 have a value .... end -->
+                        
+                        <!--div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Brand
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Asda
+                            </dd>
+                        </div-->                        
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Category
@@ -181,14 +216,6 @@
                                 342984-9813766
                             </dd>
                         </div>                  
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Brand
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                Asda
-                            </dd>
-                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Description
@@ -244,6 +271,14 @@
                             </dd>
                         </div> 
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Model or product number
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                334176-01
+                            </dd>
+                        </div>                          
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
                             </dt>
@@ -263,7 +298,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
