--- a/app/views/psd-revised-flow/remove-product.html
+++ b/app/views/psd-revised-flow/remove-product.html
@@ -24,7 +24,7 @@
     
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                     <h1 class="govuk-fieldset__heading">
-                        Do you want to remove this product from the case?
+                        Do you want to remove this product?
                     </h1>
                 </legend>
 
