--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -148,6 +148,7 @@
                     <h4 class="govuk-heading-m">Product details</h4>
 
                     <dl class="govuk-summary-list">
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
@@ -159,6 +160,40 @@
                                 </span>
                             </dd>
                         </div>
+
+                        <!-- if and 3 have a value .... start -->
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Constituent names
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                <dl class="opss-nested-definition-list">
+                                    <div>
+                                        <dt>Manufacturer's brand name</dt>
+                                        <dd>Asda</dd>
+                                    </div>
+                                    <div>
+                                        <dt>Product brand name</dt>
+                                        <dd>Lorem ipsum</dd>   
+                                    </div>
+                                    <div>
+                                        <dt>Model name</dt>
+                                        <dd>Clean dishes</dd> 
+                                    </div>
+                                </dl>
+                            </dd>
+                        </div> 
+                        <!-- if and 3 have a value .... end -->
+
+                        <!--div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Brand
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Asda
+                            </dd>
+                        </div-->                        
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Category
@@ -183,14 +218,6 @@
                                 664996-7676323
                             </dd>
                         </div>                  
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Brand
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                Asda
-                            </dd>
-                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Description
@@ -240,6 +267,14 @@
                             </dd>
                         </div> 
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Model or product number
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                334176-01
+                            </dd>
+                        </div>                          
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
                             </dt>
@@ -258,7 +293,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>                        
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
@@ -369,6 +404,7 @@
                     <h4 class="govuk-heading-m">Product details</h4>
 
                     <dl class="govuk-summary-list">
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
@@ -380,6 +416,40 @@
                                 </span>
                             </dd>
                         </div>
+
+                            <!-- if and 3 have a value .... start -->
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Constituent names
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <dl class="opss-nested-definition-list">
+                                        <div>
+                                            <dt>Manufacturer's brand name</dt>
+                                            <dd>Asda</dd>
+                                        </div>
+                                        <div>
+                                            <dt>Product brand name</dt>
+                                            <dd>Lorem ipsum</dd>   
+                                        </div>
+                                        <div>
+                                            <dt>Model name</dt>
+                                            <dd>Clean dishes</dd> 
+                                        </div>
+                                    </dl>
+                                </dd>
+                            </div> 
+                            <!-- if and 3 have a value .... end -->
+    
+                            <!--div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div-->          
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Category
@@ -404,14 +474,6 @@
                                 342984-9813766
                             </dd>
                         </div>                  
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Brand
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                Asda
-                            </dd>
-                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Description
@@ -465,7 +527,15 @@
                             <dd class="govuk-summary-list__value">
                                 Unknown
                             </dd>
-                        </div> 
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Model or product number
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                
+                            </dd>
+                        </div>                           
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
@@ -485,7 +555,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
 
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
                   
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
@@ -610,6 +680,40 @@
                                 </span>
                             </dd>
                         </div>
+
+                            <!-- if and 3 have a value .... start -->
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Constituent names
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <dl class="opss-nested-definition-list">
+                                        <div>
+                                            <dt>Manufacturer's brand name</dt>
+                                            <dd>Asda</dd>
+                                        </div>
+                                        <div>
+                                            <dt>Product brand name</dt>
+                                            <dd>Lorem ipsum</dd>   
+                                        </div>
+                                        <div>
+                                            <dt>Model name</dt>
+                                            <dd>Clean dishes</dd> 
+                                        </div>
+                                    </dl>
+                                </dd>
+                            </div> 
+                            <!-- if and 3 have a value .... end -->
+    
+                            <!--div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div-->                                  
+
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Category
@@ -634,14 +738,6 @@
                                 744929-3156792
                             </dd>
                         </div>                  
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Brand
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                Asda
-                            </dd>
-                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Description
@@ -691,6 +787,14 @@
                             </dd>
                         </div> 
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Model or product number
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                p99879_0002
+                            </dd>
+                        </div>                          
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
                             </dt>
@@ -710,7 +814,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-3">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>                        
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/asda-wood-floor-cleaner.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-526</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
