--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -232,7 +232,7 @@
                                <a href="https://www.dyson.co.uk/vacuum-cleaners/sticks/dyson-cyclone-v10-stick/dyson-cyclone-v10-absolute-pro" class="govuk-link govuk-link--no-visited-state" target="_blank">
                                    <span class="govuk-!-font-size-16">www.dyson.co.uk/vacuum-cleaners/sticks/dyson-cyclone-v10-stick/dyson-cyclone-v10-absolute-pro</span>
                                 </a>
-                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">(Opens in a new tab)</span>
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text opss-no-wrap">(Opens in a new tab)</span>
                             </dd>
                         </div>       
                         <div class="govuk-summary-list__row">
