--- a/app/views/psd-products-area/all-products.html
+++ b/app/views/psd-products-area/all-products.html
@@ -48,7 +48,7 @@
           <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                 <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/your-products.html">Your products</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/your-products-sorting.html">Your products</a>
                 </li>
                 <li>
                   <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/team-products.html">Team products</a>
@@ -180,7 +180,7 @@
           <div class="govuk-grid-row">
               <div class="govuk-grid-column-full" role="region" aria-label="Products">
   
-                <table id="results" class="govuk-table opss-table-items opss-table-items--first-col-33 opss-table-items--sm">
+                <table class="govuk-table opss-table-items opss-table-items--first-col-33 opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
                         Products: 4 columns with each case described across rows within each table body.
                     </caption>
