--- a/app/views/psd-products-area/index.html
+++ b/app/views/psd-products-area/index.html
@@ -71,7 +71,7 @@
                         <li>Update hidden skip nav from #results to #page-content</li>
                         <li>Remove #results <abbr>ID</abbr> from the <abbr>HTML</abbr> table tag.</li>
                         <li>aria-label="Cases" is now aria-label="Products"</li>
-                        <li>Text in table CAPTION updated</li>
+                        <li>Text in table CAPTION updated.</li>
                     </ul>
                 </li>
             </ul>
